# nuscenes_ros

./: .gitignore  CMakeLists.txt  format_all.sh  package.xml  plugin_description.xml
include/nuscenes2bag/: EgoPoseConverter.hpp  MetaDataProvider.hpp  MetaDataReader.hpp  MetaDataTypes.hpp  RadarDirectoryConverter.hpp  RadarObject.h  RadarObjects.h  SceneConverter.hpp  VehicleDirectoryConverter.hpp
rviz/: nuscenes.rviz  nuscenes_ros.rviz
src/: ImuDirectoryConverter.cpp  LidarDirectoryConverter.cpp  LidarDirectoryConverterXYZIR.cpp  MetaDataReader.cpp  NuScenes2Bag.cpp  RadarDirectoryConverter.cpp  SceneConverter.cpp  VehicleDirectoryConverter.cpp  nusbag_rec.cpp
src/lidar/CUDA-CenterPoint/src/: CMakeLists.txt  README.md  dispaly_result.py  main.cpp  package.xml  ros_main.cpp  ros_main.h
src/lidar/CUDA-CenterPoint/src/include/: centerpoint.h  common.h  common_old.h  kernel.h  postprocess.h  preprocess.h  tensorrt.hpp  timer.hpp
src/lidar/CUDA-CenterPoint/src/include/tracker/: Optics.hpp  iou.h  kalman.h  lidar_tracker.h  lshape.h
src/lidar/CUDA-CenterPoint/src/src/: centerpoint.cpp  postprocess.cpp  postprocess_kernels.cu  preprocess.cpp  preprocess_kernels.cu  tensorrt.cpp
src/lidar/CUDA-CenterPoint/src/src/tracker/: iou.cc  kalman.cc  lidar_tracker.cc  lshape.cc
src/lidar/CUDA-CenterPoint/src/tool/: build.trt.sh  export_neck_head.py
src/lidar/CUDA-CenterPoint/src/tool/centerpoint-export-nus/: export-scn.py  exptool.py  funcs.py
src/radar/radar_tracker_demo/src/: CMakeLists.txt  package.xml
src/radar/radar_tracker_demo/src/include/: DBSCAN.h  dataIO.h  radarTracker.h  radar_type.h  randomMatrix.h  type.h
src/radar/radar_tracker_demo/src/include/common/: DBSCAN.cc  DBSCAN.h  iou.cpp  iou.h  lshape.cc  lshape.h
src/radar/radar_tracker_demo/src/src/: DBSCAN.cc  main.cpp  radarTracker.cpp  radar_alg  radar_alg.drawio
src/radar/radar_tracker_demo/src/src/new_tracker/: DBSCAN.cc  basicKalman.h  basic_type.h  demo.ipynb  match.cc  match.h  radar_track_process.cc  radar_track_process.h  radar_tracker.cc  radar_tracker.h  randomMatrice.h  randomMatriceTest.cc
src/radar/radar_tracker_demo/src/src/tracker/: BUILD  ContiRadar.h  commonfunctions.cc  commonfunctions.h  dataStruct.h  filter.cc  filter.h  match.cc  match.h  motionStateDist.cc  motionStateDist.h  preprocess.cc  preprocess.h  radar_install_message.h  track_filter.cc  track_filter.h  track_manage.cc  track_manage.h  track_process.cc  track_process.h  track_process_new.cc  track_process_new.h  track_static_trace.cc  track_static_trace.h
src/radar/radar_tracker_demo/src/src/tracker/commonlib/: BUILD  DBSCAN.cc  DBSCAN.h
